Replaced all references to File API with Youforce API. Removed unnecessary items from the navigation menu.

--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -1,8 +1,8 @@
 <header class="navbar navbar-default" id="nc4navTopMain" role="navigation">
   <div class="navbar-header">
     <div class="navbar-brand">
-      <a href="index.html" title="File API Documentation">
-        File API Documentation
+      <a href="index.html" title="Youforce API Documentation">
+        Youforce API Documentation
         <span class="caret"></span>
       </a>
     </div>
@@ -27,7 +27,7 @@
            role="menuitem"
            >Movies</a
          >
-       </li>      
+       </li>
       <li class="second-level-children">
         <a
           class="nav-item fl-menu-item external"
@@ -64,6 +64,6 @@
          <li class="divider"></li>
          <li role="menuitem">
             <a href="#">My profile</a>
-         </li>         
+         </li>
    </li>
    </ul>  -->
