Removed unnecesary items from top navigation and updated link to new developer portal.

--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -13,25 +13,7 @@
       <li class="second-level-children">
         <a
           class="nav-item fl-menu-item external"
-          href="https://vr-api-integration.github.io/file-api-swagger-ui/"
-          target="_blank"
-          role="menuitem"
-          >API Reference</a
-        >
-      </li>
-      <li class="second-level-children">
-         <a
-           class="nav-item fl-menu-item external"
-           href="https://www.youtube.com/playlist?list=PLTnbj31SaPe8tVCPDCXzHG_DkcqXdVTu_"
-           target="_blank"
-           role="menuitem"
-           >Movies</a
-         >
-       </li>
-      <li class="second-level-children">
-        <a
-          class="nav-item fl-menu-item external"
-          href="https://developers.youforce.com"
+          href="https://oauth.developers.visma.com/"
           target="_blank"
           role="menuitem"
           >Developer portal</a
