Link to the community added

--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -21,6 +21,22 @@
       </li>
     </ul>
   </nav>
+
+  <nav class="collapse navbar-collapse" aria-label="Menu">
+    <ul class="nav navbar-nav nav-tabs first-level" role="menubar">
+      <li class="second-level-children">
+        <a
+          class="nav-item fl-menu-item external"
+          href="https://community.visma.com/t5/Nieuws-Youforce-API/Welkom-bij-Youforce-API-amp-bestandsuitwisseling/ba-p/568773"
+          target="_blank"
+          role="menuitem"
+          >Visma Community </a
+        >
+      </li>
+    </ul>
+  </nav>
+
+
 </header>
 
 <!-- <ul class="nav navbar-nav nav-tabs navbar-right first-level context-selector">
