--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -1,8 +1,8 @@
 <header class="navbar navbar-default" id="nc4navTopMain" role="navigation">
   <div class="navbar-header">
     <div class="navbar-brand">
-      <a href="index.html" title="Youforce API Documentation">
-        Youforce API Documentation
+      <a href="index.html" title="Dossier API Documentation">
+        Dossier API Documentation
         <span class="caret"></span>
       </a>
     </div>
@@ -27,7 +27,7 @@
       <li class="second-level-children">
         <a
           class="nav-item fl-menu-item external"
-          href="https://community.visma.com/t5/Nieuws-Youforce-API/Welkom-bij-Youforce-API-amp-bestandsuitwisseling/ba-p/568773"
+          href="https://community.visma.com/t5/Kennisbank-Youforce-Dossier/Personeelsdossier-Productdocumentatie/ta-p/428057"
           target="_blank"
           role="menuitem"
           >Visma Community </a
