--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -1,7 +1,7 @@
 <header class="navbar navbar-default" id="nc4navTopMain" role="navigation">
   <div class="navbar-header">
     <div class="navbar-brand">
-      <a href="index.html" title="Dossier API Documentation">
+      <a href="index.html" title="Personnel File Connector API Documentation">
         Dossier API Documentation
         <span class="caret"></span>
       </a>
