--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -2,7 +2,7 @@
   <div class="navbar-header">
     <div class="navbar-brand">
       <a href="index.html" title="Personnel File Connector API Documentation">
-        Dossier API Documentation
+        Personnel File Connector API Documentation
         <span class="caret"></span>
       </a>
     </div>
