--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -1,8 +1,8 @@
 <header class="navbar navbar-default" id="nc4navTopMain" role="navigation">
   <div class="navbar-header">
     <div class="navbar-brand">
-      <a href="index.html" title="Personnel File Connector API Documentation">
-        Personnel File Connector API Documentation
+      <a href="index.html" title="Personnel File API Documentation">
+        Personnel File API Documentation
         <span class="caret"></span>
       </a>
     </div>
