--- a/docs/css/customstyles.css
+++ b/docs/css/customstyles.css
@@ -118,3 +118,7 @@ h1 {font-size:28px !important;}
 h2 {font-size:24px !important;}
 h3 {font-size:20px !important;}
 h4 {font-size:16px; font-style: italic !important;}
+
+p {
+  margin-bottom: 30px; /* between paragraphs */
+  }
