--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -16,7 +16,7 @@
           href="https://oauth.developers.visma.com/"
           target="_blank"
           role="menuitem"
-          >Developer portal</a
+          >Developer Portal</a
         >
       </li>
     </ul>
