--- a/docs/css/customstyles.css
+++ b/docs/css/customstyles.css
@@ -119,3 +119,7 @@ h2 {font-size:24px !important;}
 h3 {font-size:20px !important;}
 h4 {font-size:16px; font-style: italic !important;}
 h5 {font-size:14px; font-style: italic !important;}
+
+docimage {
+  border: 1px solid #aaa;
+}
