--- a/docs/css/customstyles.css
+++ b/docs/css/customstyles.css
@@ -120,6 +120,6 @@ h3 {font-size:20px !important;}
 h4 {font-size:16px; font-style: italic !important;}
 h5 {font-size:14px; font-style: italic !important;}
 
-docimage {
+.docimage {
   border: 1px solid #aaa;
 }
